# terrier-old

./: .gitignore  APP_GUIDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  RAILWAY.md  README.md  check_output.txt  flake.nix  index.html  manifest-checksum.txt  twa-manifest.json
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/org/scottylabs/thdapp/: Application.java  (+2 more)
app/src/main/res/raw/: web_app_manifest.json
app/src/main/res/values/: strings.xml
assets/: tailwind.css
example/: .env.railway
migration/src/: lib.rs  m20251130_100554_create_user_hackathon_tables.rs  m20260105_230608_add_project_submissions_and_prizes.rs  m20260118_add_judging_tables.rs  m20260119_add_judge_feature_assignment.rs  m20260127_000000_add_table_number_to_submission.rs  m20260127_000001_add_prize_required_events.rs  m20260131_120000_create_messages_and_groups.rs  m20260131_125000_add_messages_content.rs  m20260131_add_judge_prize_track.rs  m20260131_add_judge_walk_type.rs  m20260201_074127_add_message_title.rs  m20260201_add_person_snapshot_to_team_requests_and_invitations.rs  m20260204_add_hackathon_configs.rs
pwa_ios/TerrierPWA/: ContentView.swift  Info.plist  PWAWebView.swift  TerrierPWA.entitlements  TerrierPWAApp.swift  TerrierPWADebug.entitlements
pwa_ios/TerrierPWA.xcodeproj/: project.pbxproj
pwa_ios/TerrierPWA/Assets.xcassets/LaunchLogo.imageset/: Contents.json
src/: config.rs  docs.rs  main.rs  server.rs
src/auth/: hooks.rs  mod.rs
src/core/: errors.rs  mod.rs
src/core/auth/: extractors.rs
src/domain/: mod.rs
src/domain/applications/handlers/: attendance.rs  events.rs  submission.rs
src/domain/applications/presets/: mod.rs  tartanhacks.rs
src/domain/hackathons/: repository.rs  types.rs
src/domain/hackathons/handlers/: create.rs  update.rs
src/domain/judging/: mod.rs  rank.rs  score.rs  types.rs
src/domain/judging/handlers/: admin.rs  assignment.rs  features.rs  lifecycle.rs  mod.rs  unified.rs
src/domain/messages/: handlers.rs  handlers_mod.rs  message_group_users.rs  message_groups.rs  messages.rs  mod.rs
src/domain/messages/handlers/: mod.rs
src/domain/meta/: handlers.rs
src/domain/mock_expo/: handlers.rs
src/domain/people/: repository.rs
src/domain/people/handlers/: mass_update.rs  mod.rs  query.rs  roles.rs
src/domain/prizes/: handlers.rs
src/domain/submissions/: fields.rs  handlers.rs  mod.rs
src/domain/teams/: types.rs
src/domain/teams/handlers/: invitations.rs  join_requests.rs
src/entities/: events.rs  feature.rs  hackathons.rs  judge_feature_assignment.rs  judge_prize_track.rs  judge_walk_type.rs  mod.rs  pairwise_comparison.rs  prelude.rs  prize.rs  prize_feature_weight.rs  prize_required_events.rs  project_feature_score.rs  project_visit.rs  submission.rs  submission_ai_summary.rs  team_invitations.rs  team_join_requests.rs  users.rs
src/ui/: mod.rs
src/ui/features/: mod.rs
src/ui/features/application/: status.rs
src/ui/features/checkin/: mod.rs  qr_scanner.rs
src/ui/features/dashboard/: hacker_guide_tile.rs  mod.rs  qr_tile.rs  table_prompt.rs  timer_tile.rs
src/ui/features/people/: modal.rs
src/ui/features/schedule/: event_detail_modal.rs  event_modal.rs
src/ui/foundation/layout/: sidebar.rs
src/ui/pages/hackathon/: apply.rs  checkin.rs  dashboard.rs  event_detail.rs  event_edit.rs  judge.rs  judging_admin.rs  layout.rs  messages.rs  mock_expo.rs  mod.rs  participants.rs  people.rs  prize_tracks.rs  results.rs  schedule.rs  settings.rs  submission.rs  table_checkin.rs
table-signs/: Cargo.toml  config.toml
table-signs/src/: config.rs  main.rs  pdf.rs  qr.rs
(+3 files in other folders)
