[package]
name = "terrier"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Anish Pallati <i@anish.land>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dioxus = { version = "0.7.3", features = ["router", "fullstack"] }
dioxus-forms = "0.1.0"
dioxus-free-icons = { version = "0.10.0", features = ["lucide"] }
dioxus-logger = "0.7.1"
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen = "0.2"

# Server-only dependencies
axum = { version = "0.8.7", features = ["macros"], optional = true }
axum-oidc = { version = "=1.0.0-dev-0", optional = true }
fred = { version = "10.1.0", features = ["unix-sockets"], optional = true }
http = { version = "1.3", optional = true }
minio = { version = "0.1.0", optional = true }
openidconnect = { version = "4.0", optional = true }
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
], optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true }
tower = { version = "0.5.2", optional = true }
tower-http = { version = "0.6", features = ["limit", "set-header"], optional = true }
tower-sessions = { version = "0.14.0", optional = true }
tower-sessions-redis-store = { version = "0.16.0", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
utoipa = { version = "5.4.0", features = [
    "axum_extras",
    "chrono",
], optional = true }
utoipa-axum = { version = "0.2.0", optional = true }
utoipa-swagger-ui = { version = "9.0.2", features = [
    "axum",
    "vendored",
], optional = true }
migration = { path = "migration", optional = true }
gloo-timers = { version = "0.3.0", features = ["futures"] }
web-sys = { version = "0.3.83", features = ["Window", "Storage", "console"] }
gloo-events = "0.2.0"
qrcodegen = "1.8.0"
rand = "0.9.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
reqwest = { version = "0.12", features = ["json"], optional = true }
ndarray = { version = "0.16.0", optional = true }
scirs2-optimize = { version = "0.1.3", optional = true }
scirs2-stats = { version = "0.1.3", optional = true }
statrs = { version = "0.18", optional = true }

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "dioxus/server",
    "dep:axum",
    "dep:axum-oidc",
    "dep:http",
    "dep:minio",
    "dep:openidconnect",
    "dep:sea-orm",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tower-sessions",
    "dep:tower-sessions-redis-store",
    "dep:fred",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:utoipa",
    "dep:utoipa-axum",
    "dep:utoipa-swagger-ui",
    "dep:migration",
    "dep:reqwest",
    "dep:ndarray",
    "dep:scirs2-optimize",
    "dep:scirs2-stats",
    "dep:statrs",
]
